[metadata]
name = vf_portalytics
home-page = https://github.com/visualfabriq/portalytics
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[files]
packages =
    vf_portalytics
    tests
    example_notebooks

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = tests
